--- a/BitCoin.ipynb
+++ b/BitCoin.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "BitCoin.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1F05ShorQprNtlwr96glnSgwxZbfmjFpV",
-      "authorship_tag": "ABX9TyPZZ6CFQCAg9rbDgOZLzJdb",
+      "authorship_tag": "ABX9TyNv6j3jovTW/TagbgCUMTfn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,15 +24,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Monishraj50/BitCoin/blob/master/BitCoin.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YlWrnSNyOs4I"
-      },
-      "source": [
-        "#BitCoin Time Series Analysis"
       ]
     },
     {
@@ -979,7 +971,15 @@
       },
       "source": [
         "##Prophet Introduction:\n",
-        "Prophet is a facebooks’ open source time series prediction. Prophet decomposes time series into trend, seasonality and holiday. It has intuitive hyper parameters which are easy to tune."
+        "Prophet is a facebooks’ open source time series prediction. Prophet decomposes time series into trend, seasonality and holiday. It has intuitive hyper parameters which are easy to tune.\n",
+        "\n",
+        "###Steps for using Prophet:\n",
+        "\n",
+        " 1.Make sure you replace closing price for y and date for ds.\n",
+        "\n",
+        " 2.Fit that dataframe to Prophet in order to detect future     patterns.\n",
+        "\n",
+        " 3.Predict the upper and lower prices of the closing price."
       ]
     },
     {
